--- a/style.css
+++ b/style.css
@@ -1,4 +1,115 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
 .body {
     display:flex;
     flex-direction: column;
 }
+
+.header {
+    flex:1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-logo {
+    font-size: 24px;
+    color: #F9FAF8
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    font-size: 18px;
+    background: #1F2937;
+    color:#e5e7eb;
+}
+
+.title-content-container {
+    display:flex;
+    width: 500px;
+    flex-direction: column;
+}
+
+.title {
+    font-weight: 900;
+    font-size: 48px;
+    color: #F9FAF8;
+}
+
+.center-info {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.center-content-container {
+    display:flex;
+    flex-direction: column;
+    background:transparent;
+    margin-bottom: 50px;
+}
+
+.center-boxes {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: row;
+}
+
+.footer {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #1F2937;
+    flex:0;
+    margin-top: auto;
+}
+
+.footer-content {
+    color:#e5e7eb;
+
+}
+button {
+    color: #3882f6
+}
+
+.testimonial {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background: #e5e7eb;
+    margin-bottom: 50px;
+}
+
+.testimonial-text {
+    font-size: 36px;
+    font-style: italic;
+    padding: 20px;
+    width: 700px;
+}
+
+.call-to-action-banner {
+    display:flex;
+    background: #3882f6;
+    color: #F9FAF8;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding:20px;
+}
+
+.footer-title {
+    font-weight: 700;
+}
+
