--- a/style.css
+++ b/style.css
@@ -52,20 +52,39 @@ a {
     font-size: 36px;
     color: #1F2937;
     font-weight: 900;
+    margin-bottom: 30px;
+    text-align: center;
 }
 
 .center-content-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.box-one-info, .box-two-info, .box-three-info, .box-four-info {
     display:flex;
-    flex-direction: column;
-    background:transparent;
-    margin-bottom: 50px;
+    justify-content: center;
+    text-align:center;
+    width: 100px;
+    flex-wrap:wrap;
 }
 
 .center-boxes {
     display:flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    align-items: row;
+    gap: 20px;
+    flex-shrink: 0;
+}
+
+.box-one, .box-two, .box-three, .box-four {
+    border-radius: 10px;
+    height: 100px;
+    width: 100px;
+    border-style: solid;
+    border-color:#3882f6
 }
 
 .footer {
@@ -85,19 +104,19 @@ button {
     color: #3882f6
 }
 
+
 .testimonial {
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
     background: #e5e7eb;
-    margin-bottom: 50px;
+    margin-top:100px;
+    margin-bottom:50px;
 }
 
 .testimonial-text {
     font-size: 36px;
     font-style: italic;
-    padding: 20px;
-    width: 700px;
+    padding: 100px;
 }
 
 .call-to-action-banner {
