--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 }
 
 .insertimagehere {
+    display:flex;
     position:absolute;
     border: 1em solid gray;
     background-color: gray;
@@ -43,14 +44,13 @@ body {
     left:920px;
     height: 200px;
     width: 500px;
-
-
-
+    align-items: center;
+    justify-content: center;
+    color: #e5e7eb;
 }
 
 .header-links {
     display:flex;
-    justify-content: space-between;
     gap: 10px;
     margin-top: -80px;
     margin-right: 192px;
@@ -58,7 +58,11 @@ body {
 
 
 ul {
+    display:flex;
+    flex-direction: row;
+    gap: 15px;
     list-style-type: none;
+
 }
 
 a {
@@ -89,7 +93,6 @@ a {
     margin-left: 150px;
     margin-top: 15px;
 }
-/* COME HERE FIRST */
 
 
 
